--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,15 +452,6 @@ p {
     2.HEADER css 
 ===========================*/
 
-.header-content {
-  background-image: url('../images/call-to-action.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.header-content .title{
-  color: white;
-}
-
 .navigation {
   -webkit-box-shadow: 0px 0px 29px 0px rgba(134, 134, 134, 0.25);
   -moz-box-shadow: 0px 0px 29px 0px rgba(134, 134, 134, 0.25);
@@ -595,7 +586,16 @@ p {
   margin-top: 90px;
   position: relative;
   overflow: hidden;
-  background-color: #fbfbfb; }
+  background-color: #fbfbfb;
+  background-image: url('../images/call-to-action.jpg'); 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #C09F80;
+  }
+  .header-content .title{
+    color: white;
+  }
+  
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .header-content {
       height: 550px; } }
@@ -732,32 +732,10 @@ p {
   background-repeat: no-repeat;
   background-size: cover; 
 }
-  /* .header-image::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 82%;
-    border: 20px solid #754ef9;
-    border-bottom: 0;
-    top: 50%;
-    left: 0;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%); }
-  .header-image::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 20px;
-    background-color: #754ef9;
-    left: 0;
-    bottom: 58px;
-    z-index: 11; }
-  .header-image img {
-    position: relative;
-    z-index: 5; } */
+.fb_iframe_widget iframe{
+  border-radius: 5px !important;
+  box-shadow: 3px 3px 3px black;
+}
 
 .header-social {
   position: absolute;
