--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,33 @@
-/*-----------------------------------------------------------------------------------
+/* Color variables */
+:root{
+  
+  --black: #1F1E1E;
+  --lightblack: #2a2929;
+  --lightlightblack: #353434;
 
-    Template Name: Unfold - Personal Resume & CV Template
-    Template URI: site.com
-    Description: Unfold Personal Resume & CV Template
-    Author: Uideck
-    Author URI: https://uideck.com/
-    Support: https://uideck.com/support/
-    Version: 1.0
+  --brown: #C09F80;
+  --lightbrown: #c3a386;
+  --lightlightbrown: #c6a88c;
+  --darkbrown: #ba9675;
+  --darkdarkbrown: #b58e6a;
 
------------------------------------------------------------------------------------
+  --pink: #E6D2C8;
+  --lightpink: #e7d4ca;
+  --lightlightpink: #e8d6cd;
+  --darkpink: #dfc5b9;
+  --darkdarkpink: #d8b9aa;
 
-    CSS INDEX
-    ===================
+  --blue: #89BBDD;
+  --lightblue: #8ebede;
+  --lightlightblue: #94c1e0;
+  --darkblue: #7bb2d8;
+  --darkdarkblue: #6daad4;
 
-    1.COMMON
-	2.HEADER
-    3.ABOUT
-    4.SERVICES
-    4.CALL TO ACTION
-    5.WORK
-    6.PRICING
-    7.BLOG
-    8.CONTACT
-    9.FOOTER
-    10.PAGE BANNER
-    10.SINGLE BLOG PAGE
+  --grey: #818181;
+  --white: whitesmoke;
+}
 
------------------------------------------------------------------------------------*/
+
 /*===========================
     1. COMMON css 
 ===========================*/
@@ -35,7 +36,9 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
   font-style: normal;
-  color: #8a8fa3; }
+  color: #8a8fa3; 
+  background-color: var(--lightlightpink);
+}
 
 * {
   margin: 0;
@@ -125,12 +128,13 @@ p {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  border: 1px solid #754ef9;
+  border: 2px solid var(--black);
   padding: 0 40px;
   font-size: 15px;
+  font-weight: bold;
   line-height: 48px;
   border-radius: 50px;
-  color: #fff;
+  color: var(--black);
   cursor: pointer;
   z-index: 5;
   -webkit-transition: all 0.3s ease-out 0s;
@@ -138,26 +142,16 @@ p {
   -ms-transition: all 0.3s ease-out 0s;
   -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
-  -webkit-box-shadow: 0px 5px 8px 0px rgba(118, 78, 249, 0.55);
-  -moz-box-shadow: 0px 5px 8px 0px rgba(118, 78, 249, 0.55);
-  box-shadow: 0px 5px 8px 0px rgba(118, 78, 249, 0.55);
-  background-color: #754ef9;
+  -webkit-box-shadow: 2px 5px 8px 0px var(--grey);
+  -moz-box-shadow: 2px 5px 8px 0px var(--grey);
+  box-shadow: 2px 5px 8px 0px var(--grey);
+  background-color: var(--lightlightblue);
   text-transform: uppercase; }
   .main-btn:hover {
-    background-color: #fff;
-    color: #754ef9;
-    border-color: #754ef9; }
-  .main-btn.main-btn-2 {
-    background-color: transparent;
-    color: #fff;
-    border-color: #fff;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
-    .main-btn.main-btn-2:hover {
-      background-color: #754ef9;
-      color: #fff;
-      border-color: #754ef9; }
+    background-color: var(--white);
+    color: var(--black);
+    border-color: var(--black); }
+  
 
 /*===== All Section Title Style =====*/
 .section-title .title {
@@ -457,7 +451,7 @@ p {
   -moz-box-shadow: 0px 0px 29px 0px rgba(134, 134, 134, 0.25);
   box-shadow: 0px 0px 29px 0px rgba(134, 134, 134, 0.25);
   padding: 30px 0;
-  background-color: #fff;
+  background-color: var(--lightblack);
   -webkit-transition: all 0.3s ease-out 0s;
   -moz-transition: all 0.3s ease-out 0s;
   -ms-transition: all 0.3s ease-out 0s;
@@ -543,7 +537,7 @@ p {
       .navigation .navbar .navbar-nav .nav-item a {
         text-transform: uppercase;
         font-size: 16px;
-        color: #8a8fa3;
+        color: var(--lightlightblue);
         font-weight: 500;
         position: relative;
         -webkit-transition: all 0.3s ease-out 0s;
@@ -556,7 +550,7 @@ p {
           content: '';
           width: 3px;
           height: 0;
-          background-color: #754ef9;
+          background-color: var(--darkdarkblue);
           left: 50%;
           top: -50px;
           -webkit-transform: translateX(-50%);
@@ -576,7 +570,7 @@ p {
             .navigation .navbar .navbar-nav .nav-item a::before {
               display: none; } }
       .navigation .navbar .navbar-nav .nav-item.active a, .navigation .navbar .navbar-nav .nav-item:hover a {
-        color: #754ef9; }
+        color: var(--darkdarkblue); }
         .navigation .navbar .navbar-nav .nav-item.active a::before, .navigation .navbar .navbar-nav .nav-item:hover a::before {
           height: 45px; }
 
@@ -591,7 +585,7 @@ p {
   background-color: #C09F80;
   }
   .header-content .title{
-    color: white;
+    color: var(--white);
   }
   
   @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -616,7 +610,7 @@ p {
   position: relative; }
   .header-content-right .sub-title {
     font-size: 30px;
-    color: #754ef9;
+    color: var(--white);
     text-transform: uppercase;
     padding-bottom: 15px; }
     @media (max-width: 767px) {
@@ -632,15 +626,6 @@ p {
   .header-content-right p {
     padding-bottom: 40px; }
 
-.header-image {
-  max-width: 630px;
-  margin: 0 auto;
-  height: 80vh;
-  position: relative; 
-  background-image: url('../images/ceo.jpg');
-  background-repeat: no-repeat;
-  background-size: cover; 
-}
 .fb_iframe_widget iframe{
   border-radius: 5px !important;
   box-shadow: 3px 3px 3px black;
@@ -667,7 +652,7 @@ p {
       content: '';
       width: 100%;
       height: 2px;
-      background-color: #754ef9;
+      background-color: var(--blue);
       left: -102.5%;
       top: 50%;
       -webkit-transform: translateY(-50%);
@@ -681,13 +666,13 @@ p {
       .header-social .header-social-icon ul li:first-child {
         margin-left: 0; }
       .header-social .header-social-icon ul li a {
-        color: #ccc;
+        color: var(--white);
         font-size: 20px;
         width: 40px;
         height: 40px;
         line-height: 40px;
         border-radius: 50%;
-        border: 1px solid #ccc;
+        border: 2px solid var(--white);
         -webkit-transition: all 0.3s ease-out 0s;
         -moz-transition: all 0.3s ease-out 0s;
         -ms-transition: all 0.3s ease-out 0s;
@@ -696,12 +681,17 @@ p {
         text-align: center; }
         .header-social .header-social-icon ul li a:hover {
           color: #fff;
-          background-color: #754ef9;
-          border-color: #754ef9; }
+          background-color: var(--blue);
+          border-color: var(--blue); }
 
 .andevon-title {
   display: inline; 
   vertical-align: middle;
+  color: var(--blue);
+}
+
+.andevon-sub-title {
+  color: var(--darkblue);
 }
 
 
@@ -756,6 +746,9 @@ p {
 /*===========================
         4.SERVICES css 
 ===========================*/
+.services-area{
+  background-color: var(--lightpink);
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .services-area {
     padding-top: 90px;
@@ -766,7 +759,7 @@ p {
     padding-bottom: 80px; } }
 
 .single-service {
-  background-color: #fff;
+  background-color: var(--darkpink);
   border: 1px solid #eceff8;
   border-radius: 5px;
   padding: 25px;
@@ -780,7 +773,7 @@ p {
       padding: 15px; } }
   .single-service .service-icon i {
     font-size: 60px;
-    color: #754ef9;
+    color: var(--darkdarkblue);
     line-height: 56px; }
   .single-service .service-content {
     margin-top: 11px; }
@@ -1136,6 +1129,9 @@ p {
 /*===========================
        8.CONTACT css 
 ===========================*/
+.contact-area{
+  background-color: var(--lightpink);
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .contact-area {
     padding-top: 90px;
@@ -1162,7 +1158,7 @@ p {
       padding: 30px 25px; } }
   .contact-box .contact-icon i {
     font-size: 48px;
-    color: #754ef9; }
+    color: var(--darkdarkblue); }
   .contact-box .contact-content {
     margin-top: 15px; }
     .contact-box .contact-content .contact-title {
