--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ p {
       height: 100%;
       border-style: solid;
       /* Spinner Color */
-      border-color: #754ef9 #754ef9 #ddd;
+      border-color: var(--darkdarkblue) var(--darkdarkblue) #ddd;
       border-radius: 50%;
       border-width: 6px; }
     .preloader .loader_34 .ytp-spinner-left .ytp-spinner-circle {
@@ -473,7 +473,7 @@ p {
     .navigation .navbar .navbar-toggler {
       padding: 2px 6px; }
       .navigation .navbar .navbar-toggler .toggler-icon {
-        width: 30px;
+          
         height: 2px;
         background-color: #32333c;
         margin: 5px 0;
@@ -699,6 +699,9 @@ p {
 /*===========================
         3.ABOUT css 
 ===========================*/
+.about-area{
+  background-color: var(--pink);
+}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-area {
     padding-top: 90px;
