--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,13 @@
 ===========================*/
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800");
 body {
-  font-family: "Poppins", sans-serif;
+  font-family:'Lucida Sans', Arial, sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   font-weight: normal;
   font-style: normal;
   color: #8a8fa3; 
   background-color: var(--lightlightpink);
+  overflow-x: hidden;
 }
 
 * {
@@ -456,7 +458,8 @@ p {
   -moz-transition: all 0.3s ease-out 0s;
   -ms-transition: all 0.3s ease-out 0s;
   -o-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s; }
+  transition: all 0.3s ease-out 0s; 
+  }
   .navigation.sticky {
     padding: 20px 0;
     -webkit-transition: all 0.3s ease-out 0s;
@@ -576,7 +579,7 @@ p {
 
 .header-content {
   height: 730px;
-  width: 100%;
+  width: 105%;
   margin-top: 90px;
   position: relative;
   background-color: #fbfbfb;
@@ -584,8 +587,14 @@ p {
   background-size: cover;
   background-color: #C09F80;
   }
-  .header-content .title{
+
+  .title{
     color: var(--white);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+  }
+  .header-content .sub-title{
+    color: var(--white);
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
   
   @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -685,9 +694,12 @@ p {
           border-color: var(--blue); }
 
 .andevon-title {
+  text-transform: uppercase;
   display: inline; 
   vertical-align: middle;
   color: var(--blue);
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 2.8rem;
 }
 
 .andevon-sub-title {
@@ -709,12 +721,18 @@ p {
 @media (max-width: 767px) {
   .about-area {
     padding-top: 70px;
-    padding-bottom: 80px; } }
-
+    padding-bottom: 80px; } 
+}
+.about-content .about-name {
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
 .about-content .about-title {
   font-size: 18px;
   font-weight: 500;
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+}
 .about-content ul {
   padding-top: 15px; }
   .about-content ul li {
@@ -771,7 +789,23 @@ p {
   -moz-transition: all 0.3s ease-out 0s;
   -ms-transition: all 0.3s ease-out 0s;
   -o-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s; }
+  transition: all 0.3s ease-out 0s; 
+}
+
+.single-service:hover {
+  -webkit-transition: all 0.3s ease-out 0s;
+  -moz-transition: all 0.3s ease-out 0s;
+  -ms-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  -webkit-box-shadow: 0px 0px 21px 0px var(--lightbrown); 
+  -moz-box-shadow: 0px 0px 21px 0px var(--lightbrown); 
+  box-shadow: 0px 0px 21px 0px var(--lightbrown); 
+}
+
+.service-title { 
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
   @media (max-width: 767px) {
     .single-service {
       padding: 15px; } }
@@ -796,11 +830,6 @@ p {
       transition: all 0.3s ease-out 0s; }
       .single-service .service-content .service-title a:hover {
         color: var(--darkdarkblue); }
-  .single-service:hover {
-    background-color: var(--darkbrown);
-    -webkit-box-shadow: 0px 0px 21px 0px rgba(152, 152, 152, 0.23);
-    -moz-box-shadow: 0px 0px 21px 0px rgba(152, 152, 152, 0.23);
-    box-shadow: 0px 0px 21px 0px rgba(152, 152, 152, 0.23); }
 
 /*===========================
     4.CALL TO ACTION css 
@@ -991,7 +1020,9 @@ p.form-message.success, p.form-message.error {
        9.FOOTER css 
 ===========================*/
 .footer-widget {
-  background-color: var(--lightblack); }
+  background-color: var(--lightblack);
+  width: 105%;
+}
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .footer-widget {
       padding-top: 100px;
