--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,8 @@
 /*===========================
     1. COMMON css 
 ===========================*/
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800");
 body {
   font-family:'Lucida Sans', Arial, sans-serif;
-  /* font-family: "Poppins", sans-serif; */
   font-weight: normal;
   font-style: normal;
   color: #8a8fa3; 
@@ -74,7 +72,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
   font-weight: 600;
   color: #32333c;
   margin: 0px; }
@@ -644,10 +641,6 @@ p {
   opacity: 70%; */
   z-index: 5;
 }
-.fb_iframe_widget:hover iframe{
-  /* transition: opacity 0.2s linear;
-  opacity: 100%; */
-}
 
 .header-social {
   position: absolute;
@@ -962,7 +955,9 @@ p {
     .contact-box .contact-content .contact-title {
       font-size: 18px;
       font-weight: 600;
-      padding-bottom: 15px; }
+      padding-bottom: 15px; 
+      font-family:Georgia, 'Times New Roman', Times, serif;
+    }
   .contact-box:hover {
     -webkit-box-shadow: 0px 0px 21px 0px rgba(152, 152, 152, 0.23);
     -moz-box-shadow: 0px 0px 21px 0px rgba(152, 152, 152, 0.23);
